Added safeguards for rules that conflict with name

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,5 +1,8 @@
+pass:[<!-- vale Microsoft.GenderBias = NO -->] 
 = Steward
 
 image::syn.png[]
 
 This is the documentation of the Steward project.
+
+pass:[<!-- vale Microsoft.GenderBias = YES -->]
