--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,7 +1,6 @@
 
-= pass:[<!-- vale Microsoft.GenderBias = NO -->]  Steward pass:[<!-- vale Microsoft.GenderBias = YES -->] 
+= pass:[<!-- vale off -->] Steward pass:[<!-- vale on -->] 
 
 image::syn.png[]
 
 This is the documentation of the pass:[<!-- vale Microsoft.GenderBias = NO -->] Steward pass:[<!-- vale Microsoft.GenderBias = YES -->] project.
-
