Simplified the use of vale by adding a separate configuration file
Signed-off-by: Adrian Kosmaczewski <adrian@vshn.ch>

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,6 +1,6 @@
 
-= pass:[<!-- vale off -->] Steward pass:[<!-- vale on -->] 
+= Steward
 
 image::syn.png[]
 
-This is the documentation of the pass:[<!-- vale Microsoft.GenderBias = NO -->] Steward pass:[<!-- vale Microsoft.GenderBias = YES -->] project.
+This is the documentation of the Steward project.
