--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -2,7 +2,9 @@
 
 image::syn.png[]
 
-This is the documentation of the Steward cluster agent. Also see the xref:syn:SDDs:0009-steward-cluster-agent.adoc[SDD 0009 - Steward Cluster Agent] for more information.
+Welcome to the documentation of the Steward cluster agent - a Project Syn tool.
+
+Also see the xref:syn:SDDs:0009-steward-cluster-agent.adoc[SDD 0009 - Steward Cluster Agent] for more information.
 
 == Introduction
 
